[package]
name = "token-vesting"
version = "0.1.0"
authors = ["Alex Sakai <bestlucky1030@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.5.0"
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"
